--- a/asdf.html
+++ b/asdf.html
@@ -187,12 +187,12 @@
 
         if (isSignUp) {
           if (type === 'jobSeeker') {
-            welcomeMessage.innerHTML = '<span style="color: #0C1421; font-size: 36px; font-weight: 600; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">Create Your Account</span>';
-            descriptionMessage.textContent = 'Sign up to start exploring job opportunities.';
+            welcomeMessage.innerHTML = '<span style="color: #0C1421; font-size: 36px; font-weight: 600; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">Create your account</span>';
+            descriptionMessage.textContent = 'Experience the future of the job search';
             actionButtonText.textContent = 'Sign up';
             signupMessage.innerHTML = '<span style="color: #313957; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Already have an account? </span><span style="color: #1E4AE9; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Sign in</span>';
           } else if (type === 'hiringManager') {
-            welcomeMessage.innerHTML = '<span style="color: #0C1421; font-size: 36px; font-weight: 600; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">Create Your Account</span>';
+            welcomeMessage.innerHTML = '<span style="color: #0C1421; font-size: 36px; font-weight: 600; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">Create your account</span>';
             descriptionMessage.textContent = 'Sign up to start hiring talent.';
             actionButtonText.textContent = 'Sign up';
             signupMessage.innerHTML = '<span style="color: #313957; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Already have an account? </span><span style="color: #1E4AE9; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Sign in</span>';
@@ -200,7 +200,7 @@
         } else { // Sign-in screen
           if (type === 'jobSeeker') {
             welcomeMessage.innerHTML = '<span style="color: #0C1421; font-size: 36px; font-weight: 600; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">Welcome Back</span> <span style="color: #0C1421; font-size: 36px; font-weight: 400; line-height: 36px; letter-spacing: 0.36px; word-wrap: break-word">👋</span>';
-            descriptionMessage.textContent = 'Sign in to start managing your job search.';
+            descriptionMessage.textContent = 'Experience the future of the job search';
             actionButtonText.textContent = 'Sign in';
             signupMessage.innerHTML = '<span style="color: #313957; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Don\'t have an account? </span><span style="color: #1E4AE9; font-size: 18px; font-weight: 400; line-height: 28.80px; letter-spacing: 0.18px; word-wrap: break-word">Sign up</span>';
           } else if (type === 'hiringManager') {
